crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__scope_id__element_with_scope_id.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "compile_with_scope_id(\"<div>hello</div>\")"
---
function ssrRender(_ctx, _push, _parent, _attrs, _scopeId) {
  _push(`<div data-v-abc123>hello</div>`)
}
